@startuml
title Ingest 文档处理状态机（执行阶段，当前实现）

[*] --> UPLOADED : 上传受理落库
UPLOADED --> INGESTING : ClaimNextUploaded + CAS 抢占成功
INGESTING --> INDEXED : ProcessDocument 成功 + CAS 收口
INGESTING --> FAILED : ProcessDocument 异常 + CAS 收口

note right of UPLOADED
可被 worker 按创建时间轮询抢占。
CAS 失败说明该文档已被其它执行者处理。
end note

note right of INGESTING
只有 INGESTING 状态允许执行处理链路，
避免重复触发导致状态乱序覆盖。
end note

note bottom
当前未实现：
- FAILED -> INGESTING（人工 reprocess）
- INDEXED -> INGESTING（重建索引）
end note

@enduml
